// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled prop 1`] = `
<input
  className="sc-hMqMXs biMCcI"
  disabled={true}
/>
`;

exports[`renders correctly with inValid prop 1`] = `
<input
  className="sc-hMqMXs gUVDmu"
/>
`;

exports[`renders correctly with no props 1`] = `
<input
  className="sc-hMqMXs kIiiqr"
/>
`;

exports[`renders correctly with valid prop 1`] = `
<input
  className="sc-hMqMXs cPKttb"
/>
`;
